--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Карта объявлений -->
-    <section class="map map--faded">
+    <section class="map "><!--map--faded-->
 
       <!-- Метки объявлений -->
       <div class="map__pins">
@@ -230,7 +230,9 @@
 
   <!-- Метка объявления -->
   <template id="pin">
-    <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
+    <button class="map__pin" type="button" style="left: 200px; top: 400px;">
+      <img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления">
+    </button>
   </template>
 
   <!-- Сообщение об успешном создании объявления -->
@@ -248,5 +250,6 @@
     </div>
   </template>
 
+<script src="js/main.js"></script>
 </body>
 </html>
