--- a/index.html
+++ b/index.html
@@ -250,8 +250,10 @@
     </div>
   </template>
 
+
 <script src="js/main.js"></script>
 <script src="js/data.js"></script>
+<script src="js/load.js"></script>
 <script src="js/elements.js"></script>
 <script src="js/map.js"></script>
 <script src="js/form.js"></script>
