--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
   </template>
 
 
-<script src="js/main.js"></script>
-<script src="js/data.js"></script>
-<script src="js/load.js"></script>
+
+<script src="js/backend.js"></script>
 <script src="js/elements.js"></script>
 <script src="js/map.js"></script>
 <script src="js/form.js"></script>
-<script src="js/card.js"></script>
+<script src="js/move.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
